Modifying delicacies/activities displaying in each tab and config file with serveur URL and responsive header

--- a/client/src/Nav/Nav.css
+++ b/client/src/Nav/Nav.css
@@ -1,3 +1,40 @@
+@media screen and (max-width: 650px) {
+    nav{
+        display: flex;
+        flex-direction: column;
+    }
+
+    nav span img{
+        margin: auto;
+    }
+
+    nav span:first-child{
+        display: flex;
+    }
+
+    nav.Show-Mobile-Nav a{
+        display: inline;
+        border-bottom: 1px solid gainsboro;
+        background: white;
+        padding-left: 10px;
+        width: 100%;
+        text-decoration: none;
+        margin: 0!important;
+        z-index: 10!important;
+    }
+    nav.Show-Mobile-Nav span{
+        display: none;
+    }
+    nav.Hide-Mobile-Nav a{
+        display: none;
+    }
+
+    span.Burger-Container{
+        display: flex;
+    }
+}
+
+
 nav{
     line-height: 50px;
     height: 50px;
@@ -7,14 +44,22 @@ nav{
     box-shadow: 0px 1px 22px -3px rgba(0,0,0,0.31);
 }
 
+.Hide-Desktop {
+    display: none;
+}
 
+.Logo, .Logo-Mobile{
+    height: 47px;
+}
 .Logo{
     float: left;
-    height: 47px;
     position: relative;
     top: 2px;
     margin-left: 15px;
     margin-right: 5px;
+}
+
+.Logo-Mobile{
 }
 
 .Nav-Icon{
@@ -28,16 +73,7 @@ nav a {
     font-family: 'Bangers', cursive;
     margin: 0px 10px;
 }
- nav a:hover{
+nav a:hover{
     color: #2374B6;
     transition: color 500ms;
 }
-
-/* Pour future responsive mobile */
-/* background: white;
-padding-left: 10px;
-width: 100%;
-text-decoration: none;
-border-bottom: 1px solid #e9e9e9;
-margin: 0;
-z-index: 1; */
